# PortViewer

./: .gitignore  Cargo.toml  GUI_USAGE.md  PROJECT_STRUCTURE_GUIDE.md  README.md  TAURI_2_COMPLETION_STATUS.md  nuxt.config.ts  package-lock.json  package.json  tauri.conf.json
.github/workflows/: build-windows.yml  ci.yml  release.yml
.output/: nitro.json
assets/css/: main.css
components/: ConnectionsTable.vue  FiltersCard.vue  SortIcon.vue  StatisticsCard.vue  StatusBadge.vue  ThemeToggle.vue
composables/: useConnections.ts  useTheme.ts
pages/: index.vue
plugins/: tauri.client.ts
src/: display.rs  filter.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: filter.rs  main.rs  network.rs  process.rs
src-tauri/src/platform/: linux.rs  linux_old.rs  lsof_parser.rs  macos.rs  mod.rs  unified.rs  windows.rs
utils/: logger.ts
