[package]
name = "windows-port-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }
clap = { version = "4.0", features = ["derive"] }
